--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8" /> 
+  <meta name="google-site-verification" content="1B_LulrbX7OX_zz987BXRkP0t3ltino59fDHDcKFfUk" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <title>gmt has — Get Money Time | @gmt_has</title>
